絵文字の大きさ調節した

--- a/resource/twittperator-sidebar.css
+++ b/resource/twittperator-sidebar.css
@@ -1,5 +1,12 @@
 [v-cloak] { display: none; }
 
+img.emoji {
+   height: 1em;
+   width: 1em;
+   margin: 0 .05em 0 .1em;
+   vertical-align: -0.1em;
+}
+
 body {
   color: #333333;
   margin: 0 2px;
